# nexura

./: .gitattributes  .gitignore  Dockerfile  cleanup_and_redeploy.ps1  cleanup_and_redeploy.sh  docker-compose.yml  install_dependencies.py  install_nexura_tools.sh  nexura_local.db  package-lock.json  render.yaml  security_analysis.json
SECURITY_REPORT/: 01_CRITICAL_ISSUES.txt  02_HIGH_SEVERITY_ISSUES.txt  03_MEDIUM_SEVERITY.txt  04_SUMMARY.txt  INDEX.md
nexura_scanner/: Dockerfile  README.md  pyproject.toml  requirements.txt  start.bat
nexura_scanner/frontend/: index.html
nexura_scanner/frontend/src/: App.css  App.jsx
nexura_scanner/frontend/src/components/: History.jsx  Reports.jsx  Scanner.jsx  Settings.jsx  Sidebar.jsx
nexura_scanner/nexura/: __main__.py  ai_engine.py  cli.py  config.py  runner.py  tool_selector.py
nexura_scanner/nexura/models/: schemas.py
nexura_scanner/nexura/parsers/: __init__.py  amass.py  gobuster.py  network.py  nikto.py  nmap.py  nuclei.py  sqlmap.py
nexura_scanner/nexura/report/: generator.py
nexura_scanner/nexura/report/templates/: report.html
nexura_scanner/nexura/web/: app.py
nexura_scanner/nexura/web/templates/: index.html
nexura_scanner/scripts/: download_model.py  setup_docker.sh  setup_linux.sh
nexura_scanner/tests/: test_parsers.py  test_schemas.py
