[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nexura-scanner"
version = "1.0.0"
description = "AI-powered vulnerability scanner"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "rich>=13.0",
    "jinja2>=3.1",
    "httpx>=0.24",
    "llama-cpp-python>=0.2",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[project.scripts]
nexura = "nexura.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
